--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "react-scripts": "^5.0.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.8.4"
-  }
+  },
+  "devDependencies": {
+  "webpack-dev-server": "^4.11.1"
+}
+  
 }
